force-app/main/default/objects/Activity/fields/ucinn_ascendv2__Is_Stewardship__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Stewardship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stewardship</label>
    <type>Checkbox</type>
</CustomField>