force-app/main/default/objects/Activity/fields/ucinn_ascendv2__Stewardship_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stewardship_Type__c</fullName>
    <label>Stewardship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beneficiary Thank You Letter</fullName>
            </value>
            <value>
                <fullName>Birthday Card</fullName>
            </value>
            <value>
                <fullName>Dean’s Acknowledgment</fullName>
            </value>
            <value>
                <fullName>Departmental Acknowledgment</fullName>
            </value>
            <value>
                <fullName>Departmental Correspondence</fullName>
            </value>
            <value>
                <fullName>Endowment Report</fullName>
            </value>
            <value>
                <fullName>Gift Agreement</fullName>
            </value>
            <value>
                <fullName>Gift Receipt</fullName>
            </value>
            <value>
                <fullName>Giving Society</fullName>
            </value>
            <value>
                <fullName>Holiday Card</fullName>
            </value>
            <value>
                <fullName>Naming Opportunity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Correspondence</fullName>
            </value>
            <value>
                <fullName>Other Dean’s Letter</fullName>
            </value>
            <value>
                <fullName>Other Presidential Letter</fullName>
            </value>
            <value>
                <fullName>Other SVP Letter</fullName>
            </value>
            <value>
                <fullName>Pledge Reminder</fullName>
            </value>
            <value>
                <fullName>Presidential Acknowledgment</fullName>
            </value>
            <value>
                <fullName>Recognition Name</fullName>
            </value>
            <value>
                <fullName>Stewardship/Impact Report</fullName>
            </value>
            <value>
                <fullName>Stewardship/Recognition Event</fullName>
            </value>
            <value>
                <fullName>Stewardship/Recognition Gift</fullName>
            </value>
            <value>
                <fullName>Stewardship Plan</fullName>
            </value>
            <value>
                <fullName>SVP Acknowledgment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>